--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,50 @@
 .App {
-  text-align: center;
+	height: 100vh;
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.title {
+	font-size: 48px;
+	letter-spacing: 0.2rem;
+	color: #001025;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.start {
+	width: 150px;
+	height: 50px;
+	margin-top: 50px;
+	cursor: pointer;
+	border: none;
+	outline: none;
+	background-color: #e38100;
+	color: white;
+	font-size: 24px;
+	box-shadow: -3px 5px 3px black;
+}
+.start:hover {
+	background-color: #00103b;
+	box-shadow: none;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.question-card-wrapper {
+	width: 70%;
+	display: flex;
+	flex-direction: column;
+	align-items: flex-end;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.next {
+	width: 150px;
+	height: 50px;
+	margin: 5px 5px 0px 0px;
+	cursor: pointer;
+	color: white;
+	font-size: 20px;
+	background-color: #000064; /* For browsers that do not support gradients */
+	background-image: linear-gradient(90deg, #020081, #03002c);
+	border: none;
+	outline: none;
 }
