--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,12 @@
 	color: #001025;
 }
 
+.score {
+	color: #dbdbdb;
+	font-size: 24px;
+	letter-spacing: 0.1rem;
+}
+
 .start {
 	width: 150px;
 	height: 50px;
@@ -47,4 +53,43 @@
 	background-image: linear-gradient(90deg, #020081, #03002c);
 	border: none;
 	outline: none;
+}
+
+.restart {
+	width: 150px;
+	height: 100px;
+	font-size: 76px;
+	outline: none;
+	border: none;
+	border-radius: 30px;
+	background-color: #939603;
+	cursor: pointer;
+}
+
+.final-score {
+	color: #d3d3d3;
+	font-size: 48px;
+	letter-spacing: 0.3rem;
+}
+.loading-spinner {
+	margin-top: 100px;
+	display: inline-block;
+	width: 70px;
+	height: 70px;
+	border: 5px solid #f8f8f8;
+	border-radius: 50%;
+	border-top-color: #9c0000;
+	animation: spin 1s ease-in-out infinite;
+	-webkit-animation: spin 1s ease-in-out infinite;
+}
+
+@keyframes spin {
+	to {
+		-webkit-transform: rotate(360deg);
+	}
+}
+@-webkit-keyframes spin {
+	to {
+		-webkit-transform: rotate(360deg);
+	}
 }
