--- a/src/components/select-card/select-card.css
+++ b/src/components/select-card/select-card.css
@@ -68,3 +68,22 @@ select {
 	border-top: var(--size) solid #383838;
 	top: 70%;
 }
+
+@media only screen and (max-width: 768px) {
+	.select-card {
+		flex-direction: column-reverse;
+		align-items: flex-start;
+	}
+}
+
+@media only screen and (max-width: 600px) {
+	.select-card {
+		width: 90%;
+	}
+	label {
+		font-size: 18px;
+	}
+	select {
+		font-size: 12px;
+	}
+}
