--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,17 @@
+html {
+	height: 100%;
+}
+
 body {
 	top: 0;
 	left: 0;
 	margin: 0;
 	background-color: #4103fc;
+	min-height: 100%;
+}
+#root {
+	display: flex;
+	justify-content: center;
 }
 * {
 	font-family: "Bangers", cursive;
